--- a/style.css
+++ b/style.css
@@ -28,10 +28,21 @@ h1 {
 }
 
 .deleteButton {
-  height: 25px;
+  height: 30px;
   width: 60px;
   color: white;
-  background-color: red;
+  background-color: #dc3545;
   border: none;
-  border-radius: 8px;
+  border-radius: 4px;
+  margin-left: 4px;
+}
+
+.editButton {
+  height: 30px;
+  width: 60px;
+  color: black;
+  background-color: #ffc107;
+  border: none;
+  border-radius: 4px;
+  margin-left: 4px;
 }
